<resources>
    <string name="app_name">Unit 9 Menus</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- Navigation Drawer menu labels -->
    <string name="communicate">Communicate</string>
    <string name="gallery">Gallery</string>
    <string name="nav_import">Import</string>
    <string name="send">Send</string>
    <string name="share">Share</string>
    <string name="slideshow">Slideshow</string>
    <string name="tools">Tools</string>
    <string name="study_mates">Study Mates</string>
    <string name="delete_study_mates">Delete Study Mates</string>
    <string name="add_study_mates">Add Study Mates</string>
    <string name="settings">Settings</string>

    <!-- Toolbar titles when navigation menu item is selected -->
    <string-array name="nav_item_activity_titles">
        <item>Import</item>
        <item>Gallery</item>
        <item>Slideshow</item>
        <item>Tools</item>
        <item>Study Mates</item>
        <item>Communicate</item>
        <item>Settings</item>
    </string-array>

    <!-- Toolbar titles when study mates menu is selected -->
    <string-array name="study_mates_titles">
        <item>Add Study Mates</item>
        <item>Delete Study Mates</item>
    </string-array>

    <!-- Toolbar titles when communicate menu is selected -->
    <string-array name="communicate_mates_titles">
        <item>Share</item>
        <item>Send</item>
    </string-array>

    <string name="action_settings">Settings</string>
    <string name="dorothy_vaughan">Dorothy Vaughan</string>
    <string name="katherine_g_johnson">Katherine G. Johnson</string>
    <string name="mary_jackson">Mary Jackson</string>
    <string name="my_study_group">My Study Group</string>
    <string name="title_activity_settings">"Settings "</string>
    <string name="send_sms">Send SMS</string>
    <string name="add_study_mate">Add Study Mate</string>
    <string name="delete_study_mate">Delete Study Mate</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="send_email">Send Email</string>
</resources>
