<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item android:title="@string/settings"
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_action_settings" />
        <item android:title="@string/study_mates"
            android:id="@+id/nav_study_mates" >
            <menu >
                <item android:title="@string/add_study_mates"
                    android:id="@+id/nav_add_mates"
                    android:icon="@drawable/ic_action_add" />
                <item android:title="@string/delete_study_mates"
                    android:id="@+id/nav_delete_mates"
                    android:icon="@drawable/ic_action_delete" />
            </menu>
        </item>
        <item android:title="@string/communicate"
            android:id="@+id/nav_communicate">
            <menu>
                 <item android:title="@string/send_email"
                     android:id="@+id/nav_sendEmail"
                     android:icon="@drawable/ic_action_email" />
                <item android:title="Send SMS"
                    android:id="@+id/nav_sendSMS"
                    android:icon="@drawable/ic_action_sms" />
            </menu>
        </item>
    </group>



</menu>
