<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        android:icon="@drawable/ic_action_settings" />
    <item android:title="@string/add_study_mate"
        android:id="@+id/action_add"
        android:icon="@drawable/ic_action_add" />
    <item android:title="@string/delete_study_mate"
        android:id="@+id/action_delete"
        android:icon="@drawable/ic_action_delete" />
    <item android:title="Send Email"
        android:id="@+id/action_email"
        tools:ignore="HardcodedText"
        android:icon="@drawable/ic_action_email"
        app:showAsAction="always" />
    <item android:title="@string/send_sms"
        android:id="@+id/action_sms"
        android:icon="@drawable/ic_action_sms"
        app:showAsAction="always" />
</menu>
